@@ -13,16 +13,12 @@ Stefan Morrell
     The patch for Apprentices/revamping Lacandon Conquest
 Karl Castle
 	Implementation of alternate army route methods.
-Stephen Baillie
-    Pointed out bugs in the easier underworld code and the improved
-    farsight code.
-	Implemented multiple taxation options controlling who could tax.
 Jon Bagshaw
     Working with Stefan on Lacandon Conquest
 Tom Alsen (aka Tzarg)
     Implementation of the FIND ALL order, and a new combat system
 	Implementation of the SPOILS code which allows saner battle spoils
-	selection.
+	  selection.
 	Implmented a GIVE ALL <category> option.
 	Multiple other code enhancements.
 Ben Lloyd
@@ -39,10 +35,15 @@ Paul Mehrer
 Stephen Baillie
     Submitted a patch to allow units passing through a region (but not
       stopping) to generate a partial, slightly innacurate hex report.
+    Pointed out bugs in the easier underworld code and the improved
+      farsight code.
+	Implemented multiple taxation options controlling who could tax.
 Nick Hoggard
     Implementation of the EXCHANGE order.
 	Implementation of the TURN order which allows pre-doing turn orders as
-	well as cyclical orders.
+	  well as cyclical orders.
+Peter Rayner
+    Patch for 'EVICT' command.
 Joseph Traub
     Changes, updates, and merging a few disparate branches
 	Maintaining and extending the 4.0.X code.
